# roboharness

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MJLAB_BACKEND.md  pyproject.toml
docs/: gmr-alignment-guide.md  gmr-alignment-sop.md  gmr-harness-refactor-review.md  gmr-harness-user-guide.html  gmr-harness-user-guide.md  gmr-harness-user-guide.zh-CN.html  gmr-harness-user-guide.zh-CN.md  gmr-setup-fix-requirements.md  smplx-180deg-alignment-requirements.md  smplx-alignment-requirements.md  smplx-amass-convention-fix.md  smplx-path-a-revert-plan.md  smplx-refactoring-plan.md
examples/: _gmr_shared.py  gmr_alignment_agent.py  gmr_alignment_inspector.py  gmr_tpose_validate.py  mjlab_integration.py  rl_curriculum_demo.py
scripts/: setup_robot.py  stage_tpose.py
specs/tpose/: engineai_pm01.json  fourier_n1.json  tienkung.json  u20.json  unitree_g1.json  unitree_h1_2.json  v11.json
src/roboharness/: _math_utils.py
src/roboharness/alignment/: __init__.py  _gmr_params.py  _gmr_path.py  body_matcher.py  config_gen.py  gmr_register.py  metrics.py  optimize.py  orientation_aligner.py  patch.py  skeleton_maps.py  smplx_coordinate.py  smplx_offset_solver.py  smplx_scale.py  smplx_template.py
src/roboharness/backends/: __init__.py  mjlab_backend.py
src/roboharness/core/: capture.py
src/roboharness/evaluate/: lerobot_plugin.py
src/roboharness/robots/unitree_g1/: locomotion.py
src/roboharness/wrappers/: gymnasium_wrapper.py
tests/: test_alignment_metrics.py  test_alignment_optimize.py  test_alignment_patch.py  test_isaac_lab_compat.py  test_isaac_lab_gpu.py  test_math_utils.py  test_mjlab_backend.py  test_sonic_real_models.py  test_wrapper_edge_cases.py
tests/alignment/: test_body_matcher.py  test_config_gen.py  test_gmr_register.py  test_setup_robot_tasks.py  test_skeleton_maps.py  test_smplx_coordinate.py  test_smplx_scale.py  test_smplx_template_calibration.py  test_smplx_tpose_coordinate_fix.py  test_stage_tpose_resolve.py
