[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roboharness"
version = "0.2.1"
description = "A Visual Testing Harness for AI Coding Agents in Robot Simulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MiaoDX", email = "miaodx@hotmail.com" },
    { name = "WLB", email = "wlb@floatinglife.ai" },
]
keywords = ["robotics", "simulation", "testing", "harness", "ai-agent", "mujoco", "visual-feedback"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
demo = [
    "mujoco>=3.0",
    "meshcat>=0.3.0",
    "gymnasium>=0.29",
    "huggingface_hub>=0.20",
    "onnxruntime>=1.16",
    "Pillow>=9.0",
    "robot_descriptions>=1.0",
    "rerun-sdk>=0.18",
]
mjlab = [
    # Local development install — not for PyPI publishing.
    # In CI/Docker, install separately: pip install /path/to/mjlab
    "mjlab @ file:///home/user2/mjlab",
    "mujoco>=3.6",
    "torch>=2.0",
]
wbc = [
    "pin>=3.0",
    "pin-pink>=0.11",
    "qpsolvers[quadprog]",
]
lerobot = [
    "lerobot",
    "gymnasium>=0.29",
    "mujoco>=3.0",
    "Pillow",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "gymnasium>=0.29",
    "huggingface_hub>=0.20",
    "onnxruntime>=1.16",
    "Pillow>=9.0",
]

[project.scripts]
roboharness = "roboharness.cli:main"

[project.urls]
Homepage = "https://github.com/MiaoDX/RobotHarness"
Repository = "https://github.com/MiaoDX/RobotHarness"
Issues = "https://github.com/MiaoDX/RobotHarness/issues"
Documentation = "https://github.com/MiaoDX/RobotHarness/tree/main/docs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/roboharness"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "PTH", "TCH", "RUF", "PIE"]
ignore = [
    "TC001",  # moving app imports to TYPE_CHECKING breaks runtime usage in this codebase
    "TC003",  # moving stdlib imports to TYPE_CHECKING breaks runtime usage in this codebase
]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Disable third-party pytest plugin autoload so host ROS installs do not
# break this repo's default test command. Load pytest-cov explicitly because
# coverage is part of the project's default test contract.
addopts = "--disable-plugin-autoload -p pytest_cov --cov=roboharness --cov-report=term-missing --cov-fail-under=90"
markers = [
    "gpu: requires GPU hardware (CUDA)",
    "slow: slow integration tests",
]

[tool.coverage.run]
# Omit files requiring optional deps not in [dev].
# These are covered by specialized CI jobs (test-mujoco) or need GPU/hardware.
# Do NOT add files here just because tests haven't been written.
omit = [
    "src/roboharness/backends/mujoco_meshcat.py",   # requires mujoco
    "src/roboharness/backends/visualizer.py",        # requires mujoco / meshcat
    "src/roboharness/backends/mjlab_backend.py",    # requires mjlab + GPU (mujoco-warp)
    "src/roboharness/controllers/wbc_ik.py",         # requires pinocchio + pink
    "src/roboharness/controllers/locomotion.py",     # re-export shim for robots.unitree_g1
    "src/roboharness/robots/unitree_g1/locomotion.py", # requires onnxruntime + huggingface_hub
    "src/roboharness/mcp/server.py",                # requires mcp SDK
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "mujoco.*",
    "meshcat.*",
    "gymnasium.*",
    "gym.*",
    "PIL.*",
    "pinocchio.*",
    "pink.*",
    "yaml.*",
    "onnxruntime.*",
    "huggingface_hub.*",
    "mcp.*",
    "mjlab.*",
    "warp.*",
]
ignore_missing_imports = true
